--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ ul.section-nav li {
 }
 
 .crossfit {
-	background:url('../img/squat.jpg');
+	background:url('../img/laugh.jpg');
 	background-size: cover;
 	background-position: center center;
 	height: 100%;
