--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,73 @@
+/* 
+	Bootstrap override
+
+*/
+
+ol, ul {
+margin-top: 15px;
+margin-bottom: 10px;
+}
+
+.row {
+	color: white;
+}
+
+.thumbnail {
+	background-color: black;
+}
+/* 
+	End Bootstrap override
+
+*/
+
+/* Layout
+================================ */
+
+body {
+	padding-top: 50px;
+}
+.container {
+	max-width: 1000px;
+}
+
+/* Jumbotron
+================================ */
+
+.jumbotron {
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+/* Glyphicons
+================================ */
+
+.glyphicon {
+	font-size: 3em;
+	display: block;
+	text-align: center;
+	color: rgba(58,135,173,1);
+}
+
+/* Carousel
+================================ */
+.Carousel {
+	background: url('../img/boxjump3.jpg');
+	color: white;
+	background-size: cover;
+}
+
+.carousel-indicators {
+	bottom: 0;
+}
+.carousel-indicators .active {
+	background-color: #222;
+}
+.carousel-indicators li {
+	border-color: #222;
+}
+
+
+
 a {
 	text-decoration: none;
 }
@@ -6,6 +76,7 @@ html, body {
 	background:url('../img/background2.jpg');
 	text-align: center;
 	font-size: 20px;
+	margin: 0;
 }
 
 h1 {
@@ -16,29 +87,45 @@ h1 {
 
 p {
 	font-family: "Helvetica", Georgie, Serif;
-	text-shadow: 2px 1px black; 
+	/*text-shadow: 2px 1px black;*/ 
 	word-wrap: break-word;
 }
 
 header, footer {
-	height:85px;
+	height:15%;
 	width: 100%;
 	background: grey;
 	display: block;
 	font-size: 1rem;
 	float: right;
 	background:url('../img/background2.jpg');
+/*	position: fixed;
+*/}
+
+header li:hover {
+	background-color: darkgrey;
+	border-radius: 15%;
+	padding: 0px;
+	margin: 0;
+	border: black solid 2px;
 }
 
-.coaches img {
-	display:inline;
+#kevin {
+	display:inline-block;
+	max-width: 250px;
+	max-height: 300px;
+	margin: auto;
+	border: black solid 2px;
 }
 
-
-/*div:hover {
-    width: 300px;
+#cam {
+	display:inline-block;
+	max-width: 300px;
+	max-height: 300px;
+	margin: auto;
+	border: black solid 2px;
 }
-*/
+
 ul.header {
 	float: left;
 	list-style: none;
@@ -60,7 +147,7 @@ ul.section-nav {
 ul.section-nav li {
 	display: inline-block;
 	vertical-align: top;
-	padding: 7px;
+	padding: 1px 7px;
 	color: white;
 	font-size: 0.9em;
 }
@@ -90,7 +177,7 @@ ul.section-nav li {
 }
 
 .welcome h1 {
-	padding-top:10px;
+	padding-top:30px;
 	color: white;
 	font-weight: bold;
 }
@@ -98,11 +185,11 @@ ul.section-nav li {
 .welcome p {
 	word-wrap: break-word;
 	text-align: center;
-	width: 500px;
+	width: 50%;
 	display: block;
-/*	padding-left: 375px;*/
-	 margin-left: auto;
-	 margin-right: auto;
+	padding-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .coaches {
@@ -116,31 +203,22 @@ ul.section-nav li {
 
 }
 
-#coaches img {
-	margin: 5px;
-    padding: 5px;
-    border: 1px solid #0000ff;
-    height: 100px;
-    width: 100px;
-    float: left;
-    text-align: left;
-}
-
 .crossfit {
-	background:url('../img/laugh.jpg');
+	background:url('../img/squat.jpg');
 	background-size: cover;
 	background-position: center center;
 	height: 100%;
 	width: 100%;
-	padding: 15px;
+	padding: 5px;
 	color: white;
 	text-align: left;
 }
 
 .crossfit p{
-	height:80px;
-	width: 50%;
-	padding-top: 25px;
+	max-height: 50%;
+	max-width: 50%;
+	padding-top: 1px;
+	display: inline-block;
 }
 
 
@@ -188,6 +266,17 @@ ul.section-nav li {
 	height: 100%;
 	width: 100%;
 	padding: 25px;
+}
+
+.pricing li{
+	padding: 5px;
+	font-weight: bold;
+	box-shadow: 4px black;
+	background-color: black;
+	border-radius: 10%;
+	display: inline-block;
+	margin-bottom: 10px;
+	position: auto;
 }
 
 .location {
@@ -246,15 +335,7 @@ form {
 }
 
 input[type="text"],
-input[type="password"],
-input[type="date"],
-input[type="datetime"],
 input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
-input[type="time"],
-input[type="url"],
 textarea,
 select {
   background: rgba(255,255,255,0.1);
@@ -269,6 +350,7 @@ select {
   color: #8a97a0;
   box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
   margin-bottom: 30px;
+  cursor: pointer;
 }
 
 select {
@@ -277,19 +359,8 @@ select {
   border-radius: 2px;
 }
 
-button {
-  padding: 19px 39px 18px 39px;
-  color: #FFF;
-  background-color: #black;
-  font-size: 18px;
-  text-align: center;
-  font-style: normal;
-  border-radius: 5px;
-  width: 30%;
-  border: 1px solid #black;
-  border-width: 1px 1px 3px;
-  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
-  margin-bottom: 10px;
+button:hover {
+	background-color: black;
 }
 
 fieldset {
@@ -351,22 +422,6 @@ background: url('../img/twitter.png');
 	border: none;
 	margin-right: 10px;
 }
-
-/*a:link { 
-    color: white;
-}
-
-a:visited {
-	color: white;
-}
-
-a:hover {
-	color: grey;
-}*/
-
-/*a:active: {
-	color: green;
-}*/
 
 .max-iframe {
 	max-width:60%;
