--- a/CSS/my-styles.css
+++ b/CSS/my-styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 .schedule-cover {
-background:url('../img/tech2.jpg');
+background:url('../img/flooring.jpg');
 background-attachment: fixed;
 background-position: center;
 background-size:cover;
