--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -322,13 +322,12 @@ ul.section-nav li {
 }
 
 .schedule-cover {
-background:url('../img/Determination.jpg');
-/*background-attachment: fixed;
-*/background-position: center center;
+background:url('../img/background2.jpg');
+background-position: center center;
 background-size:cover;
 height:120%;
 width:100%;
-padding: 10px;
+padding: 5px;
 }
 
 
