--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,7 +51,7 @@ body {
 /* Carousel
 ================================ */
 .Carousel {
-	background: url('../img/Tonya.jpg');
+	background: url('../img/squat.jpg');
 	color: white;
 	background-size: cover;
 }
