--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,6 +54,7 @@ body {
 	background: url('../img/squat.jpg');
 	color: white;
 	background-size: cover;
+	position: top;
 }
 
 .carousel-indicators {
