--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,8 +35,9 @@ body {
 
 .jumbotron {
   background:url('../img/Determination.jpg');
+  font: white;
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 /* Glyphicons
