--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,9 +35,16 @@ body {
 
 .jumbotron {
   background:url('../img/Determination.jpg');
-  font: white;
   text-align: center;
   padding-bottom: 20px;
+}
+
+.jumbotron h1 {
+	color: white;
+}
+
+.jumbotron p {
+	color: white;
 }
 
 /* Glyphicons
