--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,6 +35,7 @@ body {
 
 .jumbotron {
   background:url('../img/Determination.jpg');
+  background-position: cover;
   text-align: center;
   padding-bottom: 20px;
 }
