--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -39,7 +39,7 @@ body {
   text-align: center;
   padding-bottom: 5px;
   height: 70%;
-  background-repeat: no-repeat;
+  width: 100%;
 }
 
 .jumbotron h1 {
