--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -63,7 +63,7 @@ body {
 /* Carousel
 ================================ */
 .Carousel {
-	background: url('../img/bars.jpg');
+	background: url('../img/kettlebell.jpg');
 	color: white;
 	background-size: cover;
 }
