--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -34,7 +34,7 @@ body {
 ================================ */
 
 .jumbotron {
-  background:url('../img/kettlebell.jpg');
+  background:url('../img/matty2.jpg');
   background-position: cover;
   text-align: center;
   padding-bottom: 5px;
