--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,8 +35,8 @@ body {
 
 .jumbotron {
   background:url('../img/matty3.jpg');
-  background-position: cover;
-  text-align: center;
+/*  background-position: cover;
+*/  text-align: center;
   padding-bottom: 5px;
   height: 70%;
 }
