--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,6 +28,7 @@ margin-bottom: 10px;
 body {
 	padding-top: 50px;
 }
+
 .container {
 	max-width: 1000px;
 	padding: 20px 0;
@@ -41,7 +42,7 @@ body {
   background-position: cover;
   text-align: center;
   padding-bottom: 1px;
-  height: 100%;
+  height: 90%;
   margin-bottom: 0;
 }
 
@@ -103,7 +104,7 @@ h1 {
 
 p {
 	font-family: "Helvetica", Georgie, Serif;
-	/*text-shadow: 2px 1px black;*/ 
+	text-shadow: 2px 1px black; 
 	word-wrap: break-word;
 }
 
@@ -115,8 +116,7 @@ header, footer {
 	font-size: 1rem;
 	float: right;
 	background:url('../img/background2.jpg');
-/*	position: fixed;
-*/}
+}
 
 header li:hover {
 	background-color: darkgrey;
@@ -134,7 +134,7 @@ header li:hover {
 
 .connector h3 {
 	text-align: center;
-	color: white;
+	color: #337AB7;
 	height: auto;
 	text-transform: uppercase;
 	margin: 0;
@@ -339,8 +339,7 @@ ul.section-nav li {
 }
 
 .location-details {
-/*	float: left;
-*/	font-weight: bold;
+	font-weight: bold;
 	text-align: center;
 }
 
@@ -489,11 +488,6 @@ background: url('../img/twitter.png');
 	width: 2.5em;
 	border: none;
 	margin-right: 10px;
-}
-
-.max-iframe {
-	max-width:60%;
-	margin:0 auto;
 }
 
 .caption h3 {
