--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -68,7 +68,7 @@ body {
 /* Carousel
 ================================ */
 .Carousel {
-	background: url('../img/bars.jpg');
+	background: url('../img/blood.jpg');
 	color: white;
 	background-size: cover;
 }
@@ -374,7 +374,7 @@ ul.section-nav li {
 	background:url('../img/background2.jpg');
 	background-position: center center;
 	background-size:cover;
-	height:120%;
+	height:90%;
 	width:100%;
 	padding: 5px;
 }
