--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -291,7 +291,7 @@ ul.section-nav li {
 
 
 .community {
-	background:url('../img/community.png');
+	background:url('../img/boxjump2.jpg');
 	background-size: cover;
 	background-position: center center;
 	height: 115%;
