--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -161,16 +161,16 @@ header li:hover {
 
 #kevin {
 	display:inline-block;
-	max-width: 250px;
-	max-height: 300px;
+	max-width: 45%;
+	max-height: 50%;
 	margin: auto;
 	border: black solid 2px;
 }
 
 #cam {
 	display:inline-block;
-	max-width: 300px;
-	max-height: 300px;
+	max-width: 45%;
+	max-height: 50%;
 	margin: auto;
 	border: black solid 2px;
 }
@@ -234,7 +234,7 @@ ul.section-nav li {
 .welcome p {
 	word-wrap: break-word;
 	text-align: center;
-	width: 50%;
+	width: 90%;
 	display: block;
 	padding-top: 10px;
 	margin-left: auto;
@@ -516,4 +516,68 @@ background: url('../img/twitter.png');
 
 .caption p {
 	color: white;
+}
+
+/* Media Queries */
+
+@media only screen and (min-width: 320px) (max-width: 768px) {
+	p {
+		font-size: 18px;
+		width: 90%;
+	}
+
+	h1 {
+		font-size: 1.25rem;
+		padding-top: 0.5rem
+	}
+
+	.arrow {
+		height:10%;
+		top: 31px;
+	}
+
+	.connector h3 {
+	   font-size: 16px;
+	   margin: 0;
+  	   padding: 0.75em;
+	}
+
+	.workout {
+		padding: 1px;
+		margin: 0 auto;
+	}
+
+	.community {
+		padding: 1px;
+		margin: 0 auto;
+	}
+
+	.community p {
+		width: 90%;
+	}
+
+	.workout p {
+		width: 90%;
+		padding: 0;
+	}
+
+	.welcome p {
+		width: 100%;
+		margin:0;
+		padding: 0;
+	}
+}
+
+@media only screen and (min-width: 768px) (max-width: 800px) {
+	 p {
+	 	vertical-align: middle;
+	 	font-size: 20px;
+	 	width: 95%;
+	 }
+	}
+
+@media only screen and (min-width: 800px) (max-width: 1450px) {
+	p {
+		width:70%;
+	}
 }
