--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -159,17 +159,15 @@ header li:hover {
 }
 
 #kevin {
-	display: block;
-	max-width: 50%;
-	max-height: 50%;
+	display: inline-block;
+	width: 200px;
 	margin: auto;
 	border: black solid 2px;
 }
 
 #cam {
-	display:block;
-	max-width: 50%;
-	max-height: 50%;
+	display: inline-block;
+	width: 200px;
 	margin: auto;
 	border: black solid 2px;
 }
@@ -233,11 +231,12 @@ ul.section-nav li {
 .welcome p {
 	word-wrap: break-word;
 	text-align: center;
-	width: 90%;
 	display: block;
 	padding-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
+	padding-left: 40%;
+	padding-top: 70px; 
 	text-shadow: 1px 1px black;
 }
 
@@ -520,7 +519,7 @@ background: url('../img/twitter.png');
 
 /* Media Queries */
 
-@media only screen and (min-width: 319px) {
+@media only screen and (min-width: 300px) and (max-width: 750px) {
 	p {
 		font-size: 18px;
 		width: 90%;
@@ -556,6 +555,10 @@ background: url('../img/twitter.png');
 		width: 90%;
 	}
 
+	.welcome {
+		background-position: left center;
+	}
+
 	.welcome p {
 		width: 100%;
 		margin:0;
@@ -565,9 +568,15 @@ background: url('../img/twitter.png');
 	.pricing {
 		padding-top: 10px;
 		width: auto;
+
+	}
+
+	#kevin, #cam {
+		width: 170px;
+	}
 }
 
-@media only screen and (min-width: 568px) {
+@media only screen and (min-width: 750px) and (max-width:1024px){
 	 p {
 	 	vertical-align: middle;
 	 	font-size: 20px;
@@ -584,6 +593,10 @@ background: url('../img/twitter.png');
 		max-width: 40%;
 	}
 
+	.welcome {
+		background-position: left center;
+	}
+
 	.welcome p {
 		width: 65%;
 		margin-left: 20%;
@@ -591,14 +604,6 @@ background: url('../img/twitter.png');
 
 	}
 
-@media only screen and (min-width: 800px)  {
-	p {
-		width:60%;
-	}
-
-	.welcome p {
-		width: 50%;
-		margin-left: 40%;
-		padding-top: 70px;
-	}
+@media only screen and (min-width: 1024px) {
+	
 }
