--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,6 +27,8 @@ margin-bottom: 10px;
 
 body {
 	padding-top: 50px;
+	max-width: 100% !important;
+	overflow-x: hidden !important;
 }
 
 .container {
