--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,8 @@
 ol, ul {
 margin-top: 15px;
 margin-bottom: 10px;
+list-style: none;
+color: white;
 }
 
 .row {
@@ -407,6 +409,10 @@ ul.section-nav li {
 }
 
 .schedule-cover p {
+	color: white;
+}
+
+.schedule-cover li {
 	color: white;
 }
 
