--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -224,7 +224,7 @@ ul.section-nav li {
 .clearfix { display: block; }
 
 .welcome {
-	background:url('../img/tonya.jpg');
+	background:url('../img/Tonya.jpg');
 	background-size: cover;
 	color:white;
 	background-position: center center;
